# KannaSucre

./: .activity  .gitignore  .pre-commit-config.yaml  README.md  bot.db  connection.py  idle.py  keep_alive.py  main.py  perms.py  pyproject.toml  requirements.txt
bot/: .env  admin.py  connection.py  fun.py  image_editing.py  main.py  moderation.py  owner.py  poke.py  prefix.py  setup.py  slash.py  utilities.py
bot/files/: admin.py  events.py  fun.py  image_editing.py  moderation.py  owner.py  poke.py  setup.py  utilities.py
files/cogs/: adminCog.py  audioCog.py  funCog.py  imageCog.py  moderationCog.py  ownerCog.py  pokeCog.py  utilitiesCog.py
files/functions/: adminFunctions.py  audioFunctions.py  eventsFunctions.py  funFunctions.py  imageFunctions.py  moderationFunctions.py  ownerFunctions.py  pokeFunctions.py  utilitiesFunctions.py
files/prefix/: admin.py  events.py  fun.py  image_editing.py  moderation.py  owner.py  poke.py  utilities.py
files/resources/: adapter.py  bot.py  connection.py  locales.py  perms.py  persistent.py  pokemon.py  prefix.py  ui.py
files/ressources/: bot.py  locales.py  perms.py  persistent.py  pokemon.py  prefix.py  ui.py
files/slash/: slashAdmin.py  slashEvents.py  slashFun.py  slashImage.py  slashModeration.py  slashOwner.py  slashPoke.py  slashUtilities.py
src/: main.py
src/cogs/: adminCog.py  funCog.py  imageCog.py  moderationCog.py  ownerCog.py  pokeCog.py  utilitiesCog.py
src/functions/: adminFunctions.py  eventsFunctions.py  (+6 more)
tmp/: bot.db
useful/: fillCSV.py  poke_insert.py  table_transfer.py  trim.py
(+74 files in other folders)
