[tool.poetry]
name = "KannaSucre"
version = "1.4.0"
description = ""
authors = ["Frexom <hugom2003@sfr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9<3.10"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
Pillow = "^9.5.0"
aiosqlite = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"

[tool.black]
line_length=99

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
